--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.1",
     "react-particles": "^2.6.0",
+    "tsparticles": "^2.6.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
